--- a/iam/api/ServiceAccounts/ServiceAccounts.csproj
+++ b/iam/api/ServiceAccounts/ServiceAccounts.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.2.1" />
     <PackageReference Include="Google.Apis.Cloudresourcemanager.v1" Version="1.33.1.1232" />
     <PackageReference Include="Google.Apis.Iam.v1" Version="1.33.1.1233" />
   </ItemGroup>
